syntax = "proto3";

package waitingroom;

service Enqueue {
    rpc EnqueueCustomer (EnqueueCustomerRequest) returns (EnqueueCustomerReply){};
}
service Dequeue{
  rpc DequeueRandomCustomer (DequeueCustomerRequest) returns (DequeueCustomerReply){};
  rpc DequeueFirstCustomer (DequeueCustomerRequest) returns (DequeueCustomerReply){};
}

message EnqueueCustomerRequest{
    string ipaddr = 1;
    string macaddr = 2;
    string phonenum = 3;
}

message DequeueCustomerRequest{
}

message EnqueueCustomerReply{
    string status = 1;
}

message DequeueCustomerReply{
  string ipaddr = 1;
  string macaddr = 2;
  string phonenum = 3;
  string inTime = 4;
  string outTime = 5;
}